--- a/src/index.css
+++ b/src/index.css
@@ -308,6 +308,14 @@
   input,
   textarea,
   select,
+  [role="listbox"],
+  [role="option"],
+  [role="menu"],
+  [role="menuitem"],
+  [role="menuitemcheckbox"],
+  [role="menuitemradio"],
+  [role="listbox"] *,
+  [role="menu"] *,
   [data-tauri-drag-region="false"] {
     -webkit-app-region: no-drag;
     app-region: no-drag;
